updating config_example

--- a/src/config_example.ini
+++ b/src/config_example.ini
@@ -1,9 +1,13 @@
 [paths]
 ; output directory path
 output = C:\Data\mls
-; all player data 2024 path excel file
-all_players = C:\Data\mls\all_players.xlsx
-; all player data 2023 path excel file
+; all player data 2024 path - excel file with links
+all_players_2024 = C:\Data\mls\mls_2024\all_players_2023.xlsx
+; all player data 2023 path - excel file with links
 all_players_2023 = C:\Data\mls\mls_2023\all_players_2023.xlsx
-; didn't use this for now lol
-all_player_data = C:\Data\mls\all_player_data_v2.xlsx
+; all player data 2022 path - excel file with links
+all_players_2023 = C:\Data\mls\mls_2022\all_players_2022.xlsx
+
+[other]
+; functions will stall this many seconds before rerunning an html request due to website limits
+request_time_limit = 7
