Updated config.ini example

--- a/src/config_example.ini
+++ b/src/config_example.ini
@@ -1,12 +1,20 @@
 [paths]
 ; output directory path
 output = C:\Data\mls
-; all player data 2024 path - excel file with links
+; all player 2024 path - excel file with links
 all_players_2024 = C:\Data\mls\mls_2024\all_players_2023.xlsx
-; all player data 2023 path - excel file with links
+; all player 2023 path - excel file with links
 all_players_2023 = C:\Data\mls\mls_2023\all_players_2023.xlsx
-; all player data 2022 path - excel file with links
+; all player 022 path - excel file with links
 all_players_2023 = C:\Data\mls\mls_2022\all_players_2022.xlsx
+
+[data]
+; player data from scraping
+all_player_data_2024 = C:\Data\mls\mls_2024\all_player_data_2024.csv
+all_player_data_2023 = C:\Data\mls\mls_2023\all_player_data_2023.csv
+all_player_data_2022 = C:\Data\mls\mls_2022\all_player_data_2022.csv
+; cleaned data for model training
+model_data = C:\Data\mls\data_for_models.csv
 
 [other]
 ; functions will stall this many seconds before rerunning an html request due to website limits
